--- a/demo/webapp/templates/index.html
+++ b/demo/webapp/templates/index.html
@@ -1,8 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+	  <head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+		      crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
+                      crossorigin="anonymous">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+                        crossorigin="anonymous"></script><Paste>
+
+	</head>
 	<body>
+    		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<div class="jumbotron">
+			<div class="container">
+				<h1>Enter clothing description</h2>
+				<h2>Examples</h2>
+				<ul>
+				  <li>relaxed fit tank top in white slub effect throughout scoopneck collar tonal stitching</li>
+				  <li>slim fit stretch crepe jersey lounge pants in black elasticized waistband</li>
+				  <li>relaxed fit overdyed wool trousers in black pleats at front four pocket styling zip fly</li>
+				</ul>  
+			</div>
+		</div>
+		<div class="container">
 		<form method="POST">
 		    <input name="text" size=90>
 		    <input type="submit">
 		</form>
+		</div>
 	</body>
 </html>
