moved models to different dir

--- a/demo/webapp/templates/index.html
+++ b/demo/webapp/templates/index.html
@@ -28,6 +28,7 @@
 				  <li>relaxed fit tank top in white slub effect throughout scoopneck collar tonal stitching</li>
 				  <li>slim fit stretch crepe jersey lounge pants in black elasticized waistband</li>
 				  <li>relaxed fit overdyed wool trousers in black pleats at front four pocket styling zip fly</li>
+				  <li>one piece silk swimsuit in black self tie halter straps v neck collar self tie straps at open back elasticized waist tonal stitching</li>
 				</ul>  
 			</div>
 		</div>
